--- a/backend/GymBE/GymBE/GymBE.csproj
+++ b/backend/GymBE/GymBE/GymBE.csproj
@@ -7,15 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Core\Context\" />
-    <Folder Include="Core\Dtos\" />
-    <Folder Include="Core\AutoMapperConfig\" />
+    <Folder Include="Core\Dtos\Equipment\" />
+    <Folder Include="Core\Dtos\Staff\" />
+    <Folder Include="Core\Dtos\User\" />
   </ItemGroup>
 
 </Project>
