--- a/backend/GymBE/GymBE/appsettings.json
+++ b/backend/GymBE/GymBE/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "local": "Server=DESKTOP-VO5C65V;Database=GymManagementSystem;Trusted_Connection=true;TrustServerCertificate=true;"
+  }
 }
